--- a/miku.css
+++ b/miku.css
@@ -5,6 +5,9 @@ body{
     height: 100%;
     width: 100%;
     background-position: 0 100vh;
+    
+    max-width: 100%;
+    max-height: 100%;
 }
 .up_menu{
     width: 45vw;
