--- a/miku.css
+++ b/miku.css
@@ -18,6 +18,8 @@ body{
     background-color: #16b0b7;
 }
 .menu{
+    display: flex;
+    flex-direction: column;
     transform: scale(130vh);
     background-color: #16b0b7;
     border-radius:3vh;
@@ -37,12 +39,13 @@ h1{
     left: 125vw;
     top: 7vh;
     font-family: "Orbitron",sans-serif;
+
 }
 h3{
     background-color: #e9f54d;
     transform: scale(250%);
     border-radius: 0.4vw;
-    margin: 6vh;
+    margin: 3vh;
     text-align: center;
     margin-left: 11.5vw;
     margin-right: 11.5vw;
@@ -62,7 +65,7 @@ h3{
 .miku{
     position: relative;
     left: 46vw;
-    bottom: 70vh;
+    bottom: 64vh;
     z-index: 2;
     height: 150vh;
     width: 150vh;
@@ -149,6 +152,11 @@ h3{
 }
 
 /*flexibility display*/
+@media(max-width:1280px){
+    h1{
+        left: 117vw;
+    }
+}
 @media(max-width: 450px) {
     .up_menu{
         width: 50vw;
@@ -166,10 +174,10 @@ h3{
         left: 50vw;
     }
     h1{
-        transform: scale(120%);
+        transform: scale(100%);
         position: relative;
-        left: 15vw;
-        top: 7vh;
+        left:30px;
+        top: 6vh;
     }
     .back_miku{
         height: 120vh;
@@ -195,7 +203,7 @@ h3{
         background-color: #e9f54d;
         transform: scale(120%);
         border-radius: 1.5vw;
-        margin: 2.8vh;
+        margin: 1.6vh;
         text-align: center;
         margin-left: 0.5vw;
         margin-right: 0.5vw;
@@ -209,15 +217,15 @@ h3{
     h1{
         transform: scale(150%);
         position: relative;
-        left: 36vw;
+        left: 35vw;
         top: 2vh;
     }
     h3{
         transform: scale(100%);
         border-radius: 0.4vw;
-        margin: 3vh;
-        margin-left: 1vw;
-        margin-right: 1vw;
+        margin: 1vh;
+        margin-left: 0.2vw;
+        margin-right: 0.2vw;
         padding-bottom: 0vh;
         
     }
@@ -244,3 +252,8 @@ h3{
         height: 8vh;
     }
 }
+
+
+
+
+
